--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "ejs": "^3.1.8",
     "express": "^4.16.3",
     "lodash": "^4.17.21"
-  }
+  },
+  "engines": {
+    "node": "16.16.0"
+  },
 }
